testdata/openshift-list-1-cleaned.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: node-openshift-test
    name: node-openshift-test
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
    selector:
      deploymentconfig: node-openshift-test
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: node-openshift-test
    name: node-openshift-test
  spec:
    replicas: 1
    selector:
      app: node-openshift-test
      deploymentconfig: node-openshift-test
    strategy:
      type: Rolling
    template:
      metadata:
        labels:
          app: node-openshift-test
          deploymentconfig: node-openshift-test
      spec:
        containers:
        - image: registry.example.org/node-openshift-test@sha256:f36675b547a8e67dd91cb1c5be3107473a8722b5e276a8d617b31cd20828e99b
          imagePullPolicy: Always
          name: node-openshift-test
          ports:
          - containerPort: 8080
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - node-openshift-test
        from:
          kind: ImageStreamTag
          name: node-openshift-test:latest
          namespace: playground
      type: ImageChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: node-openshift-test
    name: node-openshift-test
  spec:
    tags:
    - from:
        kind: DockerImage
        name: registry.example.org/node-openshift-test
      name: latest
kind: List
