testdata/openshift-list-1-original.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: node-openshift-test
      openshift.io/deployment.name: node-openshift-test-1
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/scc: restricted
    creationTimestamp: 2019-02-15T20:01:23Z
    generateName: node-openshift-test-1-
    labels:
      app: node-openshift-test
      deployment: node-openshift-test-1
      deploymentconfig: node-openshift-test
    name: node-openshift-test-1-ddn6b
    namespace: playground
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicationController
      name: node-openshift-test-1
      uid: 76201cc0-315c-11e9-b2bb-005056836ad3
    resourceVersion: "32553193"
    selfLink: /api/v1/namespaces/playground/pods/node-openshift-test-1-ddn6b
    uid: 77ede1d7-315c-11e9-b2bb-005056836ad3
  spec:
    containers:
    - image: registry.example.org/node-openshift-test@sha256:f36675b547a8e67dd91cb1c5be3107473a8722b5e276a8d617b31cd20828e99b
      imagePullPolicy: Always
      name: node-openshift-test
      ports:
      - containerPort: 8080
        protocol: TCP
      resources: {}
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SETGID
          - SETUID
        runAsUser: 1000700000
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: default-token-rbl8v
        readOnly: true
    dnsPolicy: ClusterFirst
    imagePullSecrets:
    - name: default-dockercfg-gvnlx
    nodeName: dopenshift-pod1.example.org
    nodeSelector:
      node-role.kubernetes.io/compute: "true"
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 1000700000
      seLinuxOptions:
        level: s0:c26,c25
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    volumes:
    - name: default-token-rbl8v
      secret:
        defaultMode: 420
        secretName: default-token-rbl8v
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: 2019-02-15T20:01:23Z
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: 2019-02-15T20:01:26Z
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: 2019-02-15T20:01:23Z
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: docker://70a2386ea28c73062cb1322b74ef384fb1440e194b45a124d3351cf8804e5a29
      image: registry.example.org/node-openshift-test@sha256:f36675b547a8e67dd91cb1c5be3107473a8722b5e276a8d617b31cd20828e99b
      imageID: docker-pullable://registry.example.org/node-openshift-test@sha256:f36675b547a8e67dd91cb1c5be3107473a8722b5e276a8d617b31cd20828e99b
      lastState: {}
      name: node-openshift-test
      ready: true
      restartCount: 0
      state:
        running:
          startedAt: 2019-02-15T20:01:25Z
    hostIP: 172.27.43.72
    phase: Running
    podIP: 10.11.3.217
    qosClass: BestEffort
    startTime: 2019-02-15T20:01:23Z
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.completed-at: 2019-02-15 20:01:26 +0000 UTC
      openshift.io/deployer-pod.created-at: 2019-02-15 20:01:20 +0000 UTC
      openshift.io/deployer-pod.name: node-openshift-test-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: node-openshift-test
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "1"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"v1","metadata":{"name":"node-openshift-test","namespace":"playground","selfLink":"/apis/apps.openshift.io/v1/namespaces/playground/deploymentconfigs/node-openshift-test","uid":"760b70f4-315c-11e9-b2bb-005056836ad3","resourceVersion":"32553149","generation":2,"creationTimestamp":"2019-02-15T20:01:19Z","labels":{"app":"node-openshift-test"},"annotations":{"openshift.io/generated-by":"OpenShiftWebConsole"}},"spec":{"strategy":{"type":"Rolling","rolli [...]
    creationTimestamp: 2019-02-15T20:01:20Z
    generation: 2
    labels:
      app: node-openshift-test
      openshift.io/deployment-config.name: node-openshift-test
    name: node-openshift-test-1
    namespace: playground
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: node-openshift-test
      uid: 760b70f4-315c-11e9-b2bb-005056836ad3
    resourceVersion: "32553201"
    selfLink: /api/v1/namespaces/playground/replicationcontrollers/node-openshift-test-1
    uid: 76201cc0-315c-11e9-b2bb-005056836ad3
  spec:
    replicas: 1
    selector:
      app: node-openshift-test
      deployment: node-openshift-test-1
      deploymentconfig: node-openshift-test
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: node-openshift-test
          openshift.io/deployment.name: node-openshift-test-1
          openshift.io/generated-by: OpenShiftWebConsole
        creationTimestamp: null
        labels:
          app: node-openshift-test
          deployment: node-openshift-test-1
          deploymentconfig: node-openshift-test
      spec:
        containers:
        - image: registry.example.org/node-openshift-test@sha256:f36675b547a8e67dd91cb1c5be3107473a8722b5e276a8d617b31cd20828e99b
          imagePullPolicy: Always
          name: node-openshift-test
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    fullyLabeledReplicas: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-02-15T20:01:19Z
    labels:
      app: node-openshift-test
    name: node-openshift-test
    namespace: playground
    resourceVersion: "32553144"
    selfLink: /api/v1/namespaces/playground/services/node-openshift-test
    uid: 760c701a-315c-11e9-b2bb-005056836ad3
  spec:
    clusterIP: 172.30.10.188
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: node-openshift-test
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-02-15T20:01:19Z
    generation: 2
    labels:
      app: node-openshift-test
    name: node-openshift-test
    namespace: playground
    resourceVersion: "32553203"
    selfLink: /apis/apps.openshift.io/v1/namespaces/playground/deploymentconfigs/node-openshift-test
    uid: 760b70f4-315c-11e9-b2bb-005056836ad3
  spec:
    replicas: 1
    selector:
      app: node-openshift-test
      deploymentconfig: node-openshift-test
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftWebConsole
        creationTimestamp: null
        labels:
          app: node-openshift-test
          deploymentconfig: node-openshift-test
      spec:
        containers:
        - image: registry.example.org/node-openshift-test@sha256:f36675b547a8e67dd91cb1c5be3107473a8722b5e276a8d617b31cd20828e99b
          imagePullPolicy: Always
          name: node-openshift-test
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - node-openshift-test
        from:
          kind: ImageStreamTag
          name: node-openshift-test:latest
          namespace: playground
        lastTriggeredImage: registry.example.org/node-openshift-test@sha256:f36675b547a8e67dd91cb1c5be3107473a8722b5e276a8d617b31cd20828e99b
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: 2019-02-15T20:01:26Z
      lastUpdateTime: 2019-02-15T20:01:26Z
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: 2019-02-15T20:01:23Z
      lastUpdateTime: 2019-02-15T20:01:27Z
      message: replication controller "node-openshift-test-1" successfully rolled
        out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/image.dockerRepositoryCheck: 2019-02-15T20:01:19Z
    creationTimestamp: 2019-02-15T20:01:19Z
    generation: 2
    labels:
      app: node-openshift-test
    name: node-openshift-test
    namespace: playground
    resourceVersion: "32553147"
    selfLink: /apis/image.openshift.io/v1/namespaces/playground/imagestreams/node-openshift-test
    uid: 760b46ec-315c-11e9-b2bb-005056836ad3
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/generated-by: OpenShiftWebConsole
        openshift.io/imported-from: registry.example.org/node-openshift-test
      from:
        kind: DockerImage
        name: registry.example.org/node-openshift-test
      generation: 2
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: docker-registry.default.svc:5000/playground/node-openshift-test
    tags:
    - items:
      - created: 2019-02-15T20:01:19Z
        dockerImageReference: registry.example.org/node-openshift-test@sha256:f36675b547a8e67dd91cb1c5be3107473a8722b5e276a8d617b31cd20828e99b
        generation: 2
        image: sha256:f36675b547a8e67dd91cb1c5be3107473a8722b5e276a8d617b31cd20828e99b
      tag: latest
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
